<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#123456">

    <TextView
        android:id="@+id/titleText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/Test_soil_using_pH_meter"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="27sp"
        android:textStyle="bold" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideviewpager_ph"
        android:layout_width="match_parent"
        android:layout_height="448dp">

    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/dots_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slideviewpager_ph"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
    </LinearLayout>

    <TextView
        android:id="@+id/titleText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="2dp"
        android:text="@string/enter_ph_of_your_soil"
        android:layout_below="@+id/dots_layout"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/ph_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:layout_toRightOf="@+id/titleText3"
        android:layout_below="@+id/dots_layout"
        android:text="" />
    <Button
        android:id="@+id/ph_next"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:background="#04ea00"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/titleText3"
        android:text="@string/submit"
        android:textStyle="bold" />

</RelativeLayout>